[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "shadow-pixel"
version = "1.0.0"
description = "Invisible cryptographic steganography using AES-GCM and LSB pixel encoding"
authors = [{ name = "Shrey" }]
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "cryptography"
]

[project.scripts]
shadow-pixel = "cli:main"
